[project]
name = "ncmec-cybertip"
version = "0.1.0"
description = "A fully typed async client for the NCMEC CyberTipline Reporting API"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nachtalb", email = "na@nachtalb.io" }
]
requires-python = ">=3.13"
keywords = ["ncmec", "cybertipline", "csam", "async", "httpx", "reporting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic-xml>=2.21.0",
]

[project.urls]
Homepage = "https://github.com/Nachtalb/ncmec-cybertip"
Repository = "https://github.com/Nachtalb/ncmec-cybertip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.22",
    "ty>=0.0.60",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: live tests against the NCMEC test environment (require NCMEC_TEST_USER/NCMEC_TEST_PASS)",
]
addopts = "-ra"

[tool.coverage.run]
source = ["ncmec_cybertip"]
branch = true

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "W", "C4", "PT", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
